# infinit_butchery

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
infinit_butchery/: __init__.py  hooks.py  install.py  modules.txt  tasks.py
infinit_butchery/api/: __init__.py  admin.py  inventory.py  orders.py  payments.py
infinit_butchery/butchery/: __init__.py
infinit_butchery/butchery/doctype/butchery_order/: butchery_order.json
infinit_butchery/butchery/doctype/butchery_order_item/: butchery_order_item.json  butchery_order_item.py
infinit_butchery/butchery/doctype/delivery_zone/: __init__.py  delivery_zone.json
infinit_butchery/butchery/doctype/meat_category/: __init__.py  meat_category.json
infinit_butchery/butchery/doctype/payment_gateway/: payment_gateway.json  payment_gateway.py
infinit_butchery/butchery/doctype/payment_transaction/: payment_transaction.json
infinit_butchery/butchery/doctype/tenant_feature_flag/: __init__.py  tenant_feature_flag.json
infinit_butchery/doctype/butchery_order/: __init__.py  butchery_order.json
infinit_butchery/doctype/meat_category/: meat_category.json
infinit_butchery/doctype/payment_gateway/: __init__.py
infinit_butchery/doctype/tenant_feature_flag/: tenant_feature_flag.json
infinit_butchery/doctype/tenant_payment_method/: __init__.py  tenant_payment_method.json
infinit_butchery/infinit_butchery/: __init__.py
infinit_butchery/infinit_butchery/doctype/: __init__.py
infinit_butchery/utils/: __init__.py  features.py  permissions.py  tenant.py
(+13 files in other folders)
